# robocpyplusgui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  build_err.txt  check_err.txt  installer.iss
.github/workflows/: release.yml
src/: config.rs  main.rs  robocopy.rs  windows_integration.rs
ui/: main.slint
