[package]
name = "robocpyplusgui"
version = "0.1.0-beta.1"
edition = "2026"

[dependencies]
global-hotkey = "0.7.0"
regex = "1.12.3"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slint = "1.15.1"
winreg = "0.55.0"

[build-dependencies]
slint-build = "1.15.1"
