[package]
name = "robocpyplusgui"
version = "0.1.0-beta.3"
edition = "2024"

[dependencies]
global-hotkey = "0.7.0"
regex = "1.12.3"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slint = "1.15.1"
ureq = { version = "3", features = ["json"] }
winreg = "0.55.0"

[build-dependencies]
slint-build = "1.15.1"
winresource = "0.1"
